--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta meta name="viewport" content="width=device-width, user-scalable=no"
+	<meta meta name="viewport" content="width=device-width, user-scalable=no">
 	<link rel="stylesheet" href="style.css">
 	<title>Clicker</title>
 </head>
